<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.orangecoastcollege.cs273.alohamusic.MusicActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/ukulele_image_alt_text"
        app:srcCompat="@drawable/ukulele" />
    <Button
        android:id="@+id/ukuleleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="playMedia"
        android:text="@string/ukulele_button_play_text"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/ipu_image_alt_text"
        app:srcCompat="@drawable/ipu" />
    <Button
        android:id="@+id/ipuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="playMedia"
        android:text="@string/ipu_button_play_text"/>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:contentDescription="@string/hula_image_alt_text"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/hulaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="playMedia"
        android:text="@string/hula_button_watch_text" />
</LinearLayout>
